--- a/Flask/Static/idex.css
+++ b/Flask/Static/idex.css
@@ -11,9 +11,14 @@ body{
     display: flex;
     flex-direction: column;
     height: 100vh;
+    overflow: hidden;
 }
 .section {
     margin-bottom: 20px;
+    float: left;
+    width: 40%;
+    justify-content: center;
+    align-items: center;
 }
 .section h3 {
     margin-bottom: 10px;
@@ -40,10 +45,14 @@ body{
     z-index: 10;
 }
 .task-button {
+    float:left;
+    min-width: 40%;
     background-color: #007bff;
     color: white;
     border: none;
     padding: 15px 30px;
+    margin-left: 10px;
+    margin-right: 10px;
     font-size: 16px;
     cursor: pointer;
     border-radius: 5px;
@@ -61,4 +70,9 @@ body{
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    width: 30%;
+    height:100%;
+    justify-content: center;
+    align-items: center;
+    float:right;
 }
