--- a/Flask/Templates/dashboard.html
+++ b/Flask/Templates/dashboard.html
@@ -9,37 +9,40 @@
     <link rel="shortcut icon" href="{{ url_for('static', filename='Images/favicon.ico') }}">
 </head>
 <body>
-    <div class="task-container">
-        <h1>Hello, {{ first_name }}</h1>
-        <div class="section">
-            <h3>Your Tasks</h3>
-            <ul id="tasks-list">
-                {% for task in tasks %}
-                    <li class="task-item"
-                        data-task="{{ task['task'] }}"
-                        data-start-date="{{ task['dateOfTaskStart'] }}"
-                        data-start-time="{{ task['timeOfTaskStart'] }}"
-                        data-end-date="{{ task['dateOfTaskEnd'] }}"
-                        data-end-time="{{ task['timeOfTaskEnd'] }}"
-                        data-dedicated-to="{{ task['dedicatedTo'] }}"
-                        data-description="{{ task['descript'] }}">
-                        <input type="checkbox" id="task{{ task['TID'] }}" name="task{{ task['TID'] }}" value="{{ task['TID'] }}" {% if task['completed'] %} checked {% endif %} onclick="completeTask({{ task['TID'] }})">
-                        <label for="task{{ task['TID'] }}">{{ task['task'] }}</label>
-                    </li>
-                {% endfor %}
-            </ul>
-            <button class="task-button" onclick="window.location.href='{{ url_for('task') }}';">Task Input</button>
-            <button class="task-button" onclick="window.location.href='{{ url_for('completed_tasks') }}';">View Completed Tasks</button>
-        </div>
-        <div class="task-details" id="task-details">
-            <h2>Task Details</h2>
-            <p><strong>Task:</strong> <span id="details-task"></span></p>
-            <p><strong>Start Date:</strong> <span id="details-start-date"></span></p>
-            <p><strong>Start Time:</strong> <span id="details-start-time"></span></p>
-            <p><strong>End Date:</strong> <span id="details-end-date"></span></p>
-            <p><strong>End Time:</strong> <span id="details-end-time"></span></p>
-            <!--<p><strong>Assigned To:</strong> <span id="details-dedicated-to"></span></p>-->
-            <p><strong>Description:</strong> <span id="details-description"></span></p>
+    <div class="wrapper">
+
+        <div class="task-container">
+            <h1>Hello, {{ first_name }}</h1>
+            <div class="section">
+                <h3>Your Tasks</h3>
+                <ul id="tasks-list">
+                    {% for task in tasks %}
+                        <li class="task-item"
+                            data-task="{{ task['task'] }}"
+                            data-start-date="{{ task['dateOfTaskStart'] }}"
+                            data-start-time="{{ task['timeOfTaskStart'] }}"
+                            data-end-date="{{ task['dateOfTaskEnd'] }}"
+                            data-end-time="{{ task['timeOfTaskEnd'] }}"
+                            data-dedicated-to="{{ task['dedicatedTo'] }}"
+                            data-description="{{ task['descript'] }}">
+                            <input type="checkbox" id="task{{ task['TID'] }}" name="task{{ task['TID'] }}" value="{{ task['TID'] }}" {% if task['completed'] %} checked {% endif %} onclick="completeTask({{ task['TID'] }})">
+                            <label for="task{{ task['TID'] }}">{{ task['task'] }}</label>
+                        </li>
+                    {% endfor %}
+                </ul>
+                <button class="task-button" onclick="window.location.href='{{ url_for('task') }}';">Task Input</button>
+                <button class="task-button" onclick="window.location.href='{{ url_for('completed_tasks') }}';">View Completed Tasks</button>
+            </div>
+            <div class="task-details" id="task-details">
+                <h2>Task Details</h2>
+                <p><strong>Task:</strong> <span id="details-task"></span></p>
+                <p><strong>Start Date:</strong> <span id="details-start-date"></span></p>
+                <p><strong>Start Time:</strong> <span id="details-start-time"></span></p>
+                <p><strong>End Date:</strong> <span id="details-end-date"></span></p>
+                <p><strong>End Time:</strong> <span id="details-end-time"></span></p>
+                <!--<p><strong>Assigned To:</strong> <span id="details-dedicated-to"></span></p>-->
+                <p><strong>Description:</strong> <span id="details-description"></span></p>
+            </div>
         </div>
     </div>
     <button class="back-button" onclick="history.back()">Go Back</button>
