--- a/Flask/Templates/login.html
+++ b/Flask/Templates/login.html
@@ -31,19 +31,21 @@
                 </nav>
             </div>
         </header>
-        <div id="register">
-            <h2>
-                Login   
-            </h2>
-            <form method="POST">
-                <input type="email" name="email" id="email" placeholder="Email" required>
-                <input type="password" name="password" id="password" placeholder="Password" required>
-                <button type="submit">Login</button>
-                {% if error %}
-                <p style="color:red;">{{ error }}</p>
-                {% endif %}
-            </form>
-        </div>
+        <main>
+            <div id="register">
+                <h2>
+                    Login   
+                </h2>
+                <form method="POST">
+                    <input type="email" name="email" id="email" placeholder="Email" required>
+                    <input type="password" name="password" id="password" placeholder="Password" required>
+                    <button type="submit">Login</button>
+                    {% if error %}
+                    <p style="color:red;">{{ error }}</p>
+                    {% endif %}
+                </form>
+            </div>
+        </main>
         <footer>
             <p>
                 &copy; 2024 Taskify! | All Rights Reserved
