--- a/Flask/Templates/register.html
+++ b/Flask/Templates/register.html
@@ -31,22 +31,24 @@
                 </nav>
             </div>
         </header>
-        <div id="register">
-            <h2>
-                Register
-            </h2>
-            <form method="POST">
-                <input type="email" name="email" id="email" placeholder="Email" required><br>
-                <input type="text" name="first_name" id="first_name" placeholder="First Name" required><br>
-                <input type="text" name="last_name" id="last_name" placeholder="Last Name" required><br>
-                <input type="password" name="password" id="password" placeholder="Password" required><br>
-                <input type="password" name="password2" id="password2" placeholder="Confirm Password" required><br><br>
-                <button type="submit">Register</button>
-                {% if error %}
-                <p style="color:red;">{{ error }}</p>
-                {% endif %}
-            </form>
-        </div>
+        <main>
+            <div id="register">
+                <h2>
+                    Register
+                </h2>
+                <form method="POST">
+                    <input type="email" name="email" id="email" placeholder="Email" required><br>
+                    <input type="text" name="first_name" id="first_name" placeholder="First Name" required><br>
+                    <input type="text" name="last_name" id="last_name" placeholder="Last Name" required><br>
+                    <input type="password" name="password" id="password" placeholder="Password" required><br>
+                    <input type="password" name="password2" id="password2" placeholder="Confirm Password" required><br><br>
+                    <button type="submit">Register</button>
+                    {% if error %}
+                    <p style="color:red;">{{ error }}</p>
+                    {% endif %}
+                </form>
+            </div>
+        </main>
         <footer>
             <p>
                 &copy; 2024 Taskify! | All Rights Reserved
