--- a/Flask/Templates/htmltask.html
+++ b/Flask/Templates/htmltask.html
@@ -29,13 +29,7 @@
             font-weight: bold;
         }
         .form-group {
-            display: flex;
-            justify-content: space-between;
             margin-bottom: 20px;
-        }
-        .form-group label {
-            width: 100%;
-            margin-bottom: 5px;
         }
         .form-group input[type="date"],
         .form-group input[type="time"],
@@ -50,6 +44,10 @@
         }
         .form-group-half {
             width: 48%;
+            display: inline-block;
+        }
+        .form-group-full {
+            width: 100%;
         }
         input[type="submit"] {
             width: 100%;
@@ -64,17 +62,40 @@
         input[type="submit"]:hover {
             background-color: #218838;
         }
+        .dropdown-checkbox {
+            position: relative;
+            display: inline-block;
+            width: 100%;
+        }
+        .dropdown-checkbox-content {
+            display: none;
+            position: absolute;
+            background-color: #f9f9f9;
+            width: 100%;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+        }
+        .dropdown-checkbox-content label {
+            color: black;
+            padding: 8px 16px;
+            text-decoration: none;
+            display: block;
+        }
+        .dropdown-checkbox-content label:hover {
+            background-color: #f1f1f1;
+        }
+        .dropdown-checkbox:hover .dropdown-checkbox-content {
+            display: block;
+        }
     </style>
 </head>
 <body>
     
     <h1>Task Form</h1>
     <form method="POST" action="/submit_task">
-        <div class="form-group">
-            <div class="form-group-full">
-                <label for="task">Task:</label>
-                <input type="text" id="task" name="task">
-            </div>
+        <div class="form-group form-group-full">
+            <label for="task">Task:</label>
+            <input type="text" id="task" name="task">
         </div>
 
         <div class="form-group">
@@ -99,26 +120,38 @@
             </div>
         </div>
 
-        <div class="form-group">
-            <div class="form-group-full">
-                <label for="dedicatedTo">Assigned To:</label>
-                <select id="dedicatedTo" name="dedicatedTo">
+        <div class="form-group form-group-full">
+            <label for="dedicatedTo">Assigned To:</label>
+            <div class="dropdown-checkbox">
+                <button type="button" class="dropbtn">Select Users</button>
+                <div class="dropdown-checkbox-content" id="dedicatedTo">
                     {% for user in users %}
-                        <option value="{{ user.id }}">{{ user.first_name }} {{ user.last_name }}</option>
+                        <label>
+                            <input type="checkbox" name="dedicatedTo[]" value="{{ user.id }}">
+                            {{ user.first_name }} {{ user.last_name }}
+                        </label>
                     {% endfor %}
-                </select>
+                </div>
             </div>
         </div>
 
-        <div class="form-group">
-            <div class="form-group-full">
-                <label for="descript">Description:</label>
-                <textarea id="descript" name="descript"></textarea>
-            </div>
+        <div class="form-group form-group-full">
+            <label for="descript">Description:</label>
+            <textarea id="descript" name="descript"></textarea>
         </div>
 
         <input type="submit" value="Submit">
     </form>
+
+    <script>
+        document.addEventListener('click', function(event) {
+            var dropdown = document.querySelector('.dropdown-checkbox-content');
+            if (event.target.matches('.dropbtn')) {
+                dropdown.style.display = dropdown.style.display === 'block' ? 'none' : 'block';
+            } else if (!event.target.closest('.dropdown-checkbox')) {
+                dropdown.style.display = 'none';
+            }
+        });
+    </script>
 </body>
 </html>
-
