--- a/Flask/Templates/login.html
+++ b/Flask/Templates/login.html
@@ -6,8 +6,10 @@
     <title>Taskify! | Login</title>
     <link rel ="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='Images/favicon.ico') }}">
+    <script src="{{ url_for('static', filename='background-script.js') }}" defer></script>
 </head>
 <body>
+    <div class="stars" id="stars"></div>
     <div class="wrapper">
         <header>
             <div class="container">
