--- a/Flask/Static/style.css
+++ b/Flask/Static/style.css
@@ -13,7 +13,7 @@ body{
 }
 
 .container{
-    width: 95%;
+    width: 90%;
     margin:auto;
     overflow:hidden;
 }
@@ -38,7 +38,7 @@ ul{
     height: 100%;
     width: 100%;
     /* background: url('Images/20536905.jpg') center center/cover no-repeat; */
-    background-color: #1e164d;
+    background-image: radial-gradient( #0c0570 0%,#0a045a 25%,#10034f 55%, #010235 75%, #000000 100% );
     z-index: -1;
     /* animation:  15s ease-in-out infinite alternate; */
 }
@@ -61,6 +61,53 @@ ul{
     }
 }   
 
+.stars {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+  
+.star-small {
+    position: absolute;
+    width: 2px;
+    height: 2px;
+    background: white;
+    border-radius: 50%;
+    opacity: 0.8;
+    animation: animStar 0.5s linear infinite;
+}
+
+.star-mid {
+    position: absolute;
+    width: 3px;
+    height: 3px;
+    background: white;
+    border-radius: 50%;
+    opacity: 0.8;
+    animation: animStar 1s linear infinite;
+}
+
+.star-big{
+    position: absolute;
+    width: 4px;
+    height: 4px;
+    background: white;
+    border-radius: 50%;
+    opacity: 0.8;
+    animation: animStar 1.5s linear infinite;
+}
+
+  
+@keyframes animStar {
+    from {
+      transform: translateY(0);
+    }
+    to {
+      transform: translateY(-200px);
+    }
+}
+
 /* HEADERS */
 header{
     background:#3e10a2; /*#522056 */
@@ -70,17 +117,17 @@ header{
     min-height:55px;
     border-bottom:#e8491d 3px solid;
     position:relative;
-    animation: slide_down 1s ease-in-out;   
+    animation: slide_down 0.25s ease-in-out;   
 }
 
-/* @keyframes slide_down {
+@keyframes slide_down {
     0% {
         transform: translateY(-100%);
     }
     100% {
         transform: translateY(0);
     }
-} */
+}
 
 
 header a{
@@ -159,23 +206,54 @@ main{
     height: auto;
     opacity: 0.5;
     } */
+
+#index-detail-box hr{
+    width: 90%;
+    border: 1px solid #e8491d;
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
             
-.index-detail{
-    background-color: #afceee;
+#Get-Started .index-detail-1{
+    background-color: #0051ad;
+    width: 80%;
+    height:auto;
+    padding: 30px;
+    margin: 0 auto;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    /* border: 1px solid #e8491d; */
+    opacity: 0.75;
+    position: relative;
+    z-index: 1;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 25px;
+    text-align: center;
+    color: rgb(248, 149, 0);
+}
+
+.index-detail-2 {
+    background-color: #8b0202;
     width: 80%;
     height:auto;
     padding: 30px;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    margin-top: 4%;
-    margin-bottom: 9%;
     border-radius: 10px;
     /* border: 1px solid #e8491d; */
     opacity: 0.75;
     position: relative;
     z-index: 1;
+    font-size: 25px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
+    color: rgb(239, 235, 1);
 }
+
 #index-detail-box #headline {
     position:relative;
 }
@@ -212,7 +290,7 @@ main{
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 20px;
     /* color: rgb(222, 166, 25); */
-    color:rgb(220, 176, 20)
+    color:rgb(220, 176, 20);
 }
 
 #Why-Taskify{
@@ -234,34 +312,77 @@ main{
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 20px;
     z-index: 1;
-    color: black;
+    color: rgb(250, 233, 233);
 }
 
-.Key-Features-container{
+.Features-container{
     width: 90%;
     margin: auto;
     overflow: hidden;
     
 }
 
-.Key-Features-container .box{
+.Features-container .box{
     display: block;  
     float: left;
     width: 23%;
+    margin:1%;
+    margin-left: 7.25%;
+    margin-bottom: 3%;
+    margin-right: 1%;
+    /* background-color: #41cf65; */
+    opacity: 0.75;
+    position: relative;
+    z-index: 1;
+    text-align: center;
+}
+
+.box .box-1{
+    border-radius: 10px;
+    padding: 10px;
+    padding-top: 20px;
+    background-color: #008a1e;
+    height:200px;
+    color: #ffffff;
+}
+
+.box .box-2{
+    border-radius: 10px;
+    height:200px;
+    padding: 10px;
+    padding-top: 20px;
+    background-color: #8b00b9;
+    color: #ffffff;
+}
+
+.Features-container .box-3{
+    display: block;  
+    float: left;
+    width: 20%;
     padding: 10px;
     padding-top: 20px;
     margin:1%;
-    margin-left: 6%;
+    margin-left: 8%;
     margin-bottom: 3%;
     margin-right: 1%;
-    background-color: #afceee;
-    height:200px;
+    background-color: #b00181;
+    height:150px;
     opacity: 0.75;
     position: relative;
     z-index: 1;
     text-align: center;
     border-radius: 10px;
+    color:rgb(255, 255, 255)
 }
+
+#index-detail-box .special-h3-2{
+    width: 80%;
+    margin-left: 9%;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 20px;
+    color:rgb(255, 217, 0);
+    margin: 0 auto;
+}   
 
 #index-detail-box h3{
     width: 80%;
@@ -274,7 +395,7 @@ main{
 #index-detail-box .special-h3{
     margin: 0 auto;
     font-size: 20px;
-    color: rgb(205, 151, 4);
+    color: rgb(255, 217, 0);
 }
 
 
@@ -367,7 +488,7 @@ footer {
     width: 100%;
     bottom: 0;
     z-index: 1;
-
+    margin-top: 4%;
 }
 
 @keyframes slide_side{
