--- a/Flask/templates/completed_tasks.html
+++ b/Flask/templates/completed_tasks.html
@@ -4,11 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='idex.css') }}">
+    <link rel ="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <script src="{{ url_for('static', filename='idex.js') }}" defer></script>
     <title>Completed Tasks</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='Images/favicon.ico') }}">
 </head>
 <body>
+    <header>
+        <div class="container">
+            <div id="brand">
+                <h1>
+                    Taskify!
+                </h1>
+            </div>
+            <nav>
+                <ul>
+                    <li id="Dashboard">
+                        <a href="{{ url_for('nextpage') }}">My Tasks</a>
+                    </li>
+                    <li id="Completed_Tasks" class="current">
+                        <a href="{{ url_for('completed_tasks') }}">Completed</a>
+                    </li>
+                    <li id="Add_Tasks">
+                        <a href="{{ url_for('task') }}">Add Tasks</a>
+                    </li>
+                    <li id="Logout">
+                        <a href="{{ url_for('home') }}">Logout</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <div class="task-container">
         <h1>Completed Tasks</h1>
         <div class="section">
