--- a/Flask/Templates/Post.html
+++ b/Flask/Templates/Post.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>{{ post.title }}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='Chat.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='idex.css') }}">
 </head>
 <body>
     <h1>{{ post.title }}</h1>
@@ -25,5 +26,8 @@
         {% endfor %}
     </div>
     <a href="{{ url_for('discussion_board') }}">Back to Discussion Board</a>
+    <a href="{{ url_for('nextpage') }}" id="fixed-round-button">
+        <img src="{{ url_for('static', filename='images/to-do.png') }}" alt="Button Image">
+    </a>
 </body>
 </html>
