--- a/Flask/Templates/newPost.html
+++ b/Flask/Templates/newPost.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Create New Post</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='Chat.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='idex.css') }}">
 </head>
 <body>
     <h1>Create New Post</h1>
@@ -13,5 +14,8 @@
         <button type="submit">Submit</button>
     </form>
     <a href="{{ url_for('discussion_board') }}">Back to Discussion Board</a>
+    <a href="{{ url_for('nextpage') }}" id="fixed-round-button">
+        <img src="{{ url_for('static', filename='images/to-do.png') }}" alt="Button Image">
+    </a>
 </body>
 </html>
