--- a/Flask/Static/idex.css
+++ b/Flask/Static/idex.css
@@ -35,19 +35,8 @@ body{
 .section ul li:hover {
     background-color: #f0f0f0;
 }
-.task-button {
-    background-color: #007bff;
-    color: white;
-    border: none;
-    padding: 15px 30px;
-    font-size: 16px;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: background-color 0.3s ease, transform 0.3s ease;
-}
-.task-button:hover {
-    background-color: #0056b3;
-}
+
+/* Task List */
 .task-button:active {
     transform: scale(0.98);
 }
@@ -58,7 +47,15 @@ body{
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
+.task-item label {
+    flex-grow: 1;
+    margin-left: 10px;
+}
+.task-item input[type="checkbox"] {
+    margin-left: 10px;
+}
 
+/* Delete buttons */
 .delete-button {
     background: none;
     border: none;
@@ -71,11 +68,30 @@ body{
     color: darkred;
 }
 
-.task-item label {
-    flex-grow: 1;
-    margin-left: 10px;
+/* Chat Button */ 
+
+#fixed-round-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 60px;
+    height: 60px;
+    border: none;
+    border-radius: 50%;
+    background-color: transparent;
+    cursor: pointer;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.task-item input[type="checkbox"] {
-    margin-left: 10px;
+#fixed-round-button img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+#fixed-round-button:hover {
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.3);
 }
