--- a/Flask/Templates/dashboard.html
+++ b/Flask/Templates/dashboard.html
@@ -68,6 +68,9 @@
                 <p><strong>Description:</strong> <span id="details-description"></span></p>
             </div>
         </div>
+        <a href="{{ url_for('discussion_board') }}" id="fixed-round-button">
+            <img src="{{ url_for('static', filename='images/chat.png') }}" alt="Button Image">
+        </a>
     </main>
 </body>
 </html>
