--- a/Flask/Templates/CommunityChat.html
+++ b/Flask/Templates/CommunityChat.html
@@ -5,6 +5,7 @@
     <title>Discussion Board</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='Chat.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='idex.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='Images/favicon.ico') }}">
 </head>
 <body>
     <h1>Discussion Board</h1>
