--- a/Flask/Templates/dashboard.html
+++ b/Flask/Templates/dashboard.html
@@ -37,7 +37,7 @@
     </header>
     <main>
         <div class="task-container">
-            <h1>Hello, {{ first_name }}</h1>
+            <h1>Hello {{ first_name }}!</h1>
             <div class="section">
                 <h3>Your Tasks</h3>
                 <ul id="tasks-list">
