--- a/Flask/Templates/htmltask.html
+++ b/Flask/Templates/htmltask.html
@@ -47,7 +47,7 @@
         input[type="submit"] {
             width: 100%;
             padding: 10px;
-            background-color: #28a745;
+            background-color: #3e10a2;
             border: none;
             border-radius: 4px;
             color: white;
@@ -55,7 +55,7 @@
             cursor: pointer;
         }
         input[type="submit"]:hover {
-            background-color: #218838;
+            background-color: #300983;
         }
         .dropdown-checkbox {
             position: relative;
