delete posts func

--- a/Flask/Templates/CommunityChat.html
+++ b/Flask/Templates/CommunityChat.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='Chat.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='idex.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='Images/favicon.ico') }}">
+    <script src="{{ url_for('static', filename='idex.js') }}" defer></script>
 </head>
 <body>
     <h1>Discussion Board</h1>
@@ -16,6 +17,7 @@
             <h2><a href="{{ url_for('post', post_id=post.id) }}">{{ post.title }}</a></h2>
             <p>{{ post.body }}</p>
             <small>By {{ post.first_name }} {{ post.last_name }} on {{ post.created_at }}</small>
+            <button class="delete-button" onclick="confirmDelete({{ post.id }})">✖</button>
         </div>
         {% endfor %}
     </div>
