--- a/Flask/Templates/newPost.html
+++ b/Flask/Templates/newPost.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Create New Post</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='Chat.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='idex.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='Images/favicon.ico') }}">
 </head>
 <body>
@@ -12,7 +11,7 @@
     <form method="POST">
         <input type="text" name="title" placeholder="Title" required><br>
         <textarea name="body" placeholder="Write your post here..." required></textarea><br>
-        <button type="submit">Submit</button>
+        <button class=sub-button type="submit">Submit</button>
     </form>
     <a href="{{ url_for('discussion_board') }}">Back to Discussion Board</a>
     <a href="{{ url_for('nextpage') }}" id="fixed-round-button">
