--- a/Flask/Templates/newPost.html
+++ b/Flask/Templates/newPost.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Create New Post</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='Chat.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='idex.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='Images/favicon.ico') }}">
 </head>
 <body>
