--- a/Flask/Static/Chat.css
+++ b/Flask/Static/Chat.css
@@ -69,3 +69,42 @@ small {
 .delete-button:hover {
     color: darkred;
 }
+
+.new-button {
+    display: inline-block;
+    border-radius: 4px;
+    background-color: #3e10a2;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    padding: 20px;
+    width: 200px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin-left: 20px;
+}
+
+.new-button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+}
+
+.new-button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+}
+
+.new-button:hover span {
+    padding-right: 25px;
+}
+
+.new-button:hover span:after {
+    opacity: 1;
+    right: 0;
+}
