--- a/Flask/Templates/calendar.html
+++ b/Flask/Templates/calendar.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8">
         <title>Calendar</title>
         <link rel="shortcut icon" href="{{ url_for('static', filename='Images/favicon.ico') }}">
-        <link rel ="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+        <link rel ="stylesheet" href="{{ url_for('static', filename='calendar.css') }}">
+        <script src="{{ url_for('static', filename='moment.min.js') }}" defer></script>
         <script src="{{ url_for('static', filename='calendar.js') }}" defer></script>
     </head>
     <body>
