--- a/Flask/Static/style.css
+++ b/Flask/Static/style.css
@@ -113,7 +113,7 @@ header{
     position:relative;
     animation: slide_down 0.25s ease-in-out;   
 }
-
+/* 
 @keyframes slide_down {
     0% {
         transform: translateY(-100%);
@@ -121,8 +121,7 @@ header{
     100% {
         transform: translateY(0);
     }
-}
-
+} */
 
 header a{
     color:#ffffff;
