--- a/Flask/Templates/dashboard.html
+++ b/Flask/Templates/dashboard.html
@@ -72,5 +72,8 @@
             </div>
         </div>
     </main>
+    <a href="{{ url_for('discussion_board') }}" id="fixed-round-button">
+        <img src="{{ url_for('static', filename='images/chat.png') }}" alt="Button Image">
+    </a>
 </body>
 </html>
