--- a/Flask/Templates/dashboard.html
+++ b/Flask/Templates/dashboard.html
@@ -29,7 +29,7 @@
                         <a href="{{ url_for('task') }}">Add Tasks</a>
                     </li>
                     <li id="Logout">
-                        <a href="{{ url_for('home') }}">Logout</a>
+                        <a href="{{ url_for('logout') }}">Logout</a>
                     </li>
                 </ul>
             </nav>
