--- a/Flask/Templates/htmltask.html
+++ b/Flask/Templates/htmltask.html
@@ -109,7 +109,7 @@
                         <a href="{{ url_for('task') }}">Add Tasks</a>
                     </li>
                     <li id="Logout">
-                        <a href="{{ url_for('home') }}">Logout</a>
+                        <a href="{{ url_for('logout') }}">Logout</a>
                     </li>
                 </ul>
             </nav>
