--- a/Flask/Templates/index.html
+++ b/Flask/Templates/index.html
@@ -44,8 +44,7 @@
         <main>
             <div id="index-detail-box">
                 <div id="headline">
-                    <h2>
-                        Welcome to Taskify!
+                    <h2 id="demo">
                     </h2>
                 </div>
                 <div id="headline-support">
@@ -162,5 +161,23 @@
             </p>
         </footer>
     </div>
+    <script>
+        var i = 0;
+        var txt = "Welcome to Taskify!"; /* The text to be typed out */
+        var speed = 50; /* The speed/duration of the effect in milliseconds */
+        
+        function typeWriter() {
+            if (i < txt.length) {
+                document.getElementById("demo").innerHTML += txt.charAt(i);
+                i++;
+                setTimeout(typeWriter, speed);
+            }
+        }
+
+        // Start the typewriter effect when the page loads
+        window.onload = function() {
+            typeWriter();
+        };
+    </script>
 </body>
 </html>
