--- a/Flask/Templates/dashboard.html
+++ b/Flask/Templates/dashboard.html
@@ -38,8 +38,22 @@
     <main>
         <div class="task-container">
             <h1>Hello {{ first_name }}!</h1>
-            <div id="calendar_sec">
-                <div id="calendar"></div>
+            <div id="main container">
+                <div id="calendar_sec">
+                    <div id="calendar"></div>
+                </div>
+                <div id="description_sec">
+                    <div id="description-bar">
+                        <div class="header">
+                            <div class="header-item" style = "float:left; margin-left: 10%">
+                                <span style = "background-color:#d15b5b;">Task</span>
+                            </div>
+                            <div class="header-item" style="float:right; margin-right: 10%">
+                                <span>Time</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="section">
                 <h3>Tasks</h3>
