--- a/Flask/Static/idex.css
+++ b/Flask/Static/idex.css
@@ -78,9 +78,9 @@ body{
     height: 60px;
     border: none;
     border-radius: 50%;
-    background-color: transparent;
+    background-color: white;
     cursor: pointer;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 4px 6px 10px rgba(0, 0, 0, 0.2);
     display: flex;
     align-items: center;
     justify-content: center;
